<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="TcoSmartFunctionKitIO_v_4_x_x" Id="{a5bf0596-9aef-0ba4-1fa5-6ad077d52294}">
    <Declaration><![CDATA[TYPE TcoSmartFunctionKitIO_v_4_x_x : STRUCT
    Response : TcoSmartFunctionKitResponseHw_v_4_x_x;
    Request : TcoSmartFunctionKitRequestHw_v_4_x_x;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>